--- a/style.css
+++ b/style.css
@@ -1,19 +1,69 @@
 .second-row{
     display: inline-block;
     vertical-align: top;
+    font-size: 11px;
+}
+.blue-text{
+    color:skyblue;
 }
 
-#container:only-child{
+#banner{
+    background-color: #cf2f36;
+    color:white;
+    border-radius: 15px;
+    padding: 10px 15px;
+    margin: 10px;
+}
+
+#container{
+    position: absolute;
+    background-color:#1b335d;
+    width: 970px;
+    height: 574px;
+    size:12px
+}
+#menu{
+    
+    border-radius: 15px;
+    padding: 5px;
+    background-color: #2a7d8c;
+    margin: 15px;
+    list-style: none;
+    color: turquoise;
+
+}
+#menu a{
+    text-decoration: turquoise;
+    color:turquoise;
+}
+#menu ul{
+    list-style-position: inside;
+    padding:0px;
+}
+#menu ul li ul{
+    padding-left: 3em;
+}
+
+#content{
+    margin:15px;
+    background-color: #0e1822;
+    color: white;
+    width: 715px;
     border-radius: 15px;
     padding: 20px 10px;
 }
-#container{
-    background-color:navy;
+#content a{
+    text-decoration: turquoise;
+    color:turquoise;
 }
-#menu{
-    background-color: aquamarine;
-}
-#content{
-    background-color: black;
+#footer{
+    border-radius: 15px;
+    padding:5px;
+    margin:10px;
+    background-color: grey;
     color: white;
+}
+#footer a{
+    color:turquoise;
+    
 }
